--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -810,37 +810,37 @@
                 <!-- NEW: ปุ่มฟังก์ชันเสริมต่างๆ -->
                 <div class="function-buttons-group">
                     <!-- ปุ่ม "อนุมัติยอด" -->
-                    <div class='btn-group'>\
-                        <button type='button' class='btn btn-approve dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>\
-                            <i class='fas fa-check-circle'></i> อนุมัติยอด\
-                        </button>\
-                        <ul class='dropdown-menu'>\
-                            <li><a class='dropdown-item' href='#' onclick='openAddLoanModal(this.id, this.name)'>ทำอนุมัติยอด</a></li>\
-                            <li><a class='dropdown-item' href='#'>ตารางอนุมัติลูกค้า</a></li>\
-                        </ul>\
-                    </div>\
+                    <div class='btn-group'>
+                        <button type='button' class='btn btn-approve dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>
+                            <i class='fas fa-check-circle'></i> อนุมัติยอด
+                        </button>
+                        <ul class='dropdown-menu'>
+                            <li><a class='dropdown-item' href='#' onclick='openAddLoanModal(this.id, this.name)'>ทำอนุมัติยอด</a></li>
+                            <li><a class='dropdown-item' href='#'>ตารางอนุมัติลูกค้า</a></li>
+                        </ul>
+                    </div>
 
                     <!-- ปุ่ม "ปิดจ๊อบ" -->
-                    <div class='btn-group'>\
-                        <button type='button' class='btn btn-warning dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>\
+                    <div class='btn-group'>
+                        <button type='button' class='btn btn-warning dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>
                             <i class='fas fa-times-circle'></i> ปิดจ๊อบ\
-                        </button>\
-                        <ul class='dropdown-menu'>\
-                            <li><a class='dropdown-item' href='#' onclick='closejob(this.id, this.name)'>ปิดจ๊อบ</a></li>\
-                            \
-                        </ul>\
-                    </div>\
+                        </button>
+                        <ul class='dropdown-menu'>
+                            <li><a class='dropdown-item' href='#' onclick='closejob(this.id, this.name)'>ปิดจ๊อบ</a></li>
+                            
+                        </ul>
+                    </div>
 
                     <!-- ปุ่ม "ตัวเสีย" -->
-                    <div class='btn-group'>\
-                        <button type='button' class='btn btn-danger dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>\
-                            <i class='fas fa-thumbs-down'></i> ตัวเสีย\
-                        </button>\
-                        <ul class='dropdown-menu'>\
-                            <li><a class='dropdown-item' href='#' onclick='isbad(this.id, this.name)'>ทำเครื่องเสีย</a></li>\
-                            \
-                        </ul>\
-                    </div>\
+                    <div class='btn-group'>
+                        <button type='button' class='btn btn-danger dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>
+                            <i class='fas fa-thumbs-down'></i> ตัวเสีย
+                        </button>
+                        <ul class='dropdown-menu'>
+                            <li><a class='dropdown-item' href='#' onclick='isbad(this.id, this.name)'>ทำเครื่องเสีย</a></li>
+                            
+                        </ul>
+                    </div>
 
                     <!-- ปุ่ม "ชั๊กปลั๊ก" -->
                     <div class="btn-group">
